--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
     font-family: 'Sacramento', cursive; /* Apply Sacramento font to the question */
     font-size: 52px; /* Set font size for the question */
 }
-#question_1 {
+
+#intro {
     font-family: 'Sacramento', cursive; /* Apply Sacramento font to the question */
     font-size: 50px; /* Set font size for the question */
 }
